--- a/product-list/myapp/package.json
+++ b/product-list/myapp/package.json
@@ -9,7 +9,10 @@
   "author": "John Doe",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "@sap/xsenv": "^2.2.0",
+    "@sap/xssec": "^2.2.4",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "request": "^2.88.0"
